# qiskit-addon-sqd-hpc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  requirements.txt  tox.ini
.github/workflows/: README.md  coverage.yml  docs.yml  lint.yml  release.yml  test_development_versions.yml  test_latest_versions.yml  test_without_exceptions_rtti.yml
benchmark/: benchmark_configuration_recovery.cpp  benchmark_main.cpp  benchmark_subsampling.cpp
data/: fcidump_mock.txt
docs/: compilation-flags.rst  conf.py  index.rst
docs/apidocs/: configuration_recovery.rst  fermion.rst  index.rst  postselection.rst  subsampling.rst
docs/tutorials/: 01_compile.rst  02_prepare_input_file.ipynb  03_run_chemistry_problem.rst  index.rst
include/qiskit/addon/sqd/: bitset_full.hpp  configuration_recovery.hpp  fermion.hpp  postselection.hpp  subsampling.hpp
include/qiskit/addon/sqd/eigensolver/: sbd.hpp
include/qiskit/addon/sqd/internal/: bitset_common.hpp  concepts.hpp  exception-macros.hpp  sample-without-replacement.hpp
include/qiskit/addon/sqd/support/: boost_dynamic_bitset.hpp
releasenotes/notes/: bitstrings_to_ci_strings_symmetrize_spin-fb7198c15f05cd3d.yaml
src/: sqd-hdf5-chemistry.cpp
test/: bitset_compat.hpp  doctest_main.cpp  test_configuration_recovery.cpp  test_fermion.cpp  test_postselection.cpp  test_sbd_eigensolver.cpp  test_subsampling.cpp
